--- a/main.css
+++ b/main.css
@@ -88,10 +88,23 @@ button {
     margin-top: 32px;
 }
 
+.nome-produto {
+    display: block;
+}
+
+.nome-produto p {
+    margin-top: 8px;
+}
+
 @media screen and (max-width: 640px) {
     .sobre-a-loja {
         display: block;
         align-items: center;
+    }
+
+    .container {
+        text-align: center;
+        max-width: 90%;
     }
 
     .conteudo { 
@@ -102,11 +115,72 @@ button {
         display: block;
     }
 
+    .produtos article {
+        margin-left: 0;
+        margin-top: 32px;
+    }
+
     .sobre-a-loja img {
-        width: 350px;
+        width: 300px;
+        margin-right: 0;
     }
 
     header .container {
         flex-direction: column;
+    }
+
+    header .container a {
+        color: #fff;
+        text-decoration: none;
+        font-size: 18px;
+        margin-left:0;
+        font-weight: bold;
+    }
+
+    button {
+        margin: 18px;
+        display: block;
+        width: 100%;
+        padding: 8px;
+        border: none;
+        background-color: #119759;
+        color: #fff;
+        font-size: 16px;
+        font-weight: bold;
+        font-style: italic;
+        cursor: pointer;
+        border-radius: 6px;
+    }
+}
+
+@media screen and (min-width: 641px) and (max-width:1023px) {
+    .container {
+        max-width: 90%;
+    }
+
+    .sobre-a-loja {
+        display: block;
+        align-items: center;
+    }
+
+    .produtos {
+        max-width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2, 49%);
+        column-gap: 3%;
+        row-gap: 5%;
+    }
+
+    .produtos article {
+            margin-left: 0;
+            margin-top: 0;
+    }
+    .button {
+        margin: 0 5%;
+        width: 100%;
+    }
+
+    .conteudo h2 {
+        margin-bottom: 32px;
     }
 }
